--- a/index.html
+++ b/index.html
@@ -115,21 +115,48 @@
         </div>
         <div id="page5">
             <div class="elem">
-                <h1>Fashion - Sport - Technology -</h1>
-                <h1>Fashion - Sport - Technology -</h1>
+                <h1>Fashion - <span>Sport</span> - Technology - </h1>
+                <h1><span>Fashion</span> - Sport - Technology - </h1>
+            </div>
+            <div class="elem2">
+                <h1>Beauty - <span>Real Estate</span> - Architechture - </h1>
+                <h1><span>Beauty</span> - Real Estate - <span>Architechture</span> - </h1>
             </div>
             <div class="elem">
-                <h1>Beauty - Real Estate - Architechture -</h1>
-                <h1>Beauty - Real Estate - Architechture -</h1>
+                <h1>Travel - <span>Science</span> - Partners - </h1>
+                <h1><span>Travel</span> - Science - <span>Partners</span> - </h1>
             </div>
-            <div class="elem">
-                <h1>Travel - Science - Partners -</h1>
-                <h1>Travel - Science - Partners -</h1>
+            <div class="elem2">
+                <h1>Hotels - <span>Music</span> - Automative - </h1>
+                <h1><span>Hotels</span> - Music - <span>Automative</span> - </h1>
             </div>
-            <div class="elem">
-                <h1>Hotels - Music - Automative -</h1>
-                <h1>Hotels - Music - Automative -</h1>
+        </div>
+        <div id="footer">
+            <h1>Let's Create</h1>
+            <div class="underline"></div>
+            <div id="footer-div">
+                <div class="box">
+                    <h6>Socials</h6>
+                    <h5>Dribbble</h5>
+                    <h5>Behance</h5>
+                    <h5>Instagram</h5>
+                    <h5>Facebook</h5>
+                    <h5>Twitter</h5>
+                    <h5>YouTube</h5>
+                </div>
+                <div class="box">
+                    <h6>Address</h6>
+                    <h5>Zamarstynivska 55</h5>
+                    <h5>79019 Lviv</h5>
+                    <h5>Ukraine</h5>
+                </div>
+                <div class="box">
+                    <h6>Say Hi!</h6>
+                    <h5>info@obys.agency</h5>
+                </div>
             </div>
+            <div class="underline"></div>
+            <h5>Obys Agency &copy; 2025</h5>
         </div>
     </div>
 
